# slag-rust

./: .gitignore  Cargo.toml  README.md  runner_dev
.cargo/: config.toml
config/: base.json  global.json  micron.json  users.json
old/src/: lib.rs  main.rs
old/src/base/: mod.rs
old/src/micron/: knowncodes.sql  mod.rs
old/src/tags/: mod.rs
old/src/users/: guildmeta.sql  mod.rs  userdb.sql
src/: lib.rs  main.rs
src/base/: mod.rs
src/guilds/: mod.rs
src/micron/: micron.rs  mod.rs
src/tags/: mod.rs  tags.sql
src/users/: mod.rs  usermeta.sql  users.rs
