[package]
name = "slag"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ctcl-bregis/slag-rust"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.4.2"
gethostname = "0.4.3"
hex = "0.4.3"
indexmap = { version = "2.2.5", features = ["serde"] }
log = "0.4.20"
poise = "0.6.1"
sqlite = "0.33.0"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }

# Build for x86-64 with optimizations
[profile.release]
opt-level = 3
debug = 0
